[project]
name = "passport-photo-gen"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.135.1",
    "mediapipe==0.10.14",
    "numpy>=2.4.3",
    "opencv-python>=4.13.0.92",
    "pillow-heif>=1.3.0",
    "uvicorn>=0.41.0",
]
